<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:backgroundTint="#C80F7A4F">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/six_month_courses"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!-- List of Courses -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/first_aid_n_sewing_n_life_skills"
            android:textColor="#090808"
            android:textSize="18sp" />

        <!-- Fee -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:text="@string/fee_r1500_each"
            android:textColor="#0E0E0E"
            android:textSize="16sp" />

        <!-- Back Button -->
        <Button
            android:id="@+id/btnBack"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />
    </LinearLayout>
</ScrollView>
