<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C80F7A4F"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/courseImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/sewing_course"
            android:scaleType="centerCrop"
            android:src="@drawable/sewing" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/sewing_course"
            android:textColor="#0C0C0C"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingTop="8dp"
            android:text="@string/learn_sewing_fundamentals_garment_construction_and_basic_tailoring_techniques_in_this_six_week_course_great_for_beginners_looking_to_start_a_small_sewing_business_or_create_custom_clothing"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/duration_6_months_nfee_r1500"
            android:textColor="#0C0C0C"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/btnBack"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back" />

            <Button
                android:id="@+id/btnEnroll"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/enroll" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
