<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C80F7A4F"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/courseImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/cooking_course"
            android:scaleType="centerCrop"
            android:src="@drawable/cooking" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/cooking_course"
            android:textColor="#070707"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="4dp"
            android:paddingTop="8dp"
            android:text="@string/this_six_month_cooking_course_introduces_learners_to_food_preparation_nutrition_basics_baking_and_local_international_cuisine_skills_for_home_and_professional_use"
            android:textColor="#090909"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="12dp"
            android:text="@string/duration_6_weeks_nfee_r750"
            android:textColor="#070707"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/btnBack"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="#000000" />

            <Button
                android:id="@+id/btnEnroll"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/enroll"
                android:textColor="#000000" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
